# CS_450_Phase_2

./: .coveragerc  .dockerignore  .eslintrc.js  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  API_FIXES_SUMMARY.md  AUTOGRADER_CURRENT.md  AWS_IMPLEMENTATION_SUMMARY.md  AWS_SETUP_GUIDE.md  AWS_SETUP_STATUS.md  CD_SETUP_GUIDE.md  CHANGELOG.md  CRITICAL_IAM_POLICY_ISSUE.md  DEBUG_AUTHENTICATE_SUMMARY.md  DEBUG_NOT_REACHING_FASTAPI.md  DELIVERABLES_TABLE.md  Dockerfile  Dockerfile.validator  GAP_EXPLANATION.md  IAM_POLICY_ISSUES.md  IAM_POLICY_ISSUES_SUMMARY.md  IMPORT_INSTRUCTIONS.md  OIDC_COMPLETE_CHECKLIST.md  OIDC_DIAGNOSTIC_REPORT.md  OIDC_TROUBLESHOOTING.md  PERFORMANCE_BOTTLENECKS.md  PERFORMANCE_ENDPOINT_SPEC_COMPLIANCE.md  PROJECT_EXPLANATION_GUIDE.md  Project - Phase 2.6 - Security Analysis - template.md  QUICK_TEST_COMMANDS.md  README.md  REVIEWEDNESS_FIX_EXPLANATION.md  SECURITY.md  TEAM_SETUP_GUIDE.md  TESTING_GUIDE.md  TODO_simple_fix.md  URL_FILE.txt  auth.json  (+46 more)
.github/: cd.yml
actions-runner/: .credentials  .credentials_rsaparams  .runner
docs/: API.md  API_ERROR_CODES.md  AWS_SETUP_GUIDE.md  CD_SETUP_GUIDE.md  CD_TESTING_GUIDE.md  CLOUDWATCH_LOG_SEARCH.md  CURL_COMMANDS.md  DEBUG_LOGS_ANALYSIS.md  MANUAL_VALIDATION_IMPLEMENTATION.md  POST_ARTIFACT_MODELS.md  PRE_PYDANTIC_VALIDATION_ANALYSIS.md  PROJECT_EXPLANATION_GUIDE.md  SCHEMA_ALTERNATIVES.md  SECRETS_MANAGER_GITHUB_TOKEN.md  STATUS_CODES.md  TEAM_SETUP_GUIDE.md  TRIGGER_WORKFLOW.md  WCAG_COMPLIANCE.md  autograder_openapi_spec.yaml  ecs-troubleshooting.md  frontend.md  overview.md  (+8 more)
(+246 files in other folders)
